fixed issue with reply getting cut off, hopefully

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1007,7 +1007,7 @@ p.network
 
 p.network.reply
 {
-	max-width:375px;
+	max-width:370px;
 }
 
 p.network.date
